# VertexAIAgentEngine_CICD_Pipeline_Demo

./: .gitignore  README.md  cloudbuild.yaml  deploy_agent.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py  requirements.txt
agent/deploy/: deploy.py  requirements.txt
agent/test/: test_e2e.py
agent/tests/: test_agent.py
config/: dev.yaml  production.yaml  staging.yaml
installation_scripts/: install_package.sh
