[project]
name = "vertexaiagentengine-cicd-pipeline-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
                "google-adk==1.22.1",
                "google-cloud-logging==3.13.0",
                "python-dotenv==1.0.0",
                "pytest==7.4.3",
                "pytest-asyncio==0.23.1"
            ]
