[project]
name = "vertexaiagentengine-cicd-pipeline-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
                "google-cloud-logging",
                "python-dotenv",
                "pytest",
                "pytest-asyncio",
                "google-cloud-aiplatform>=1.46.0",
                "cloudpickle",
                "google-adk==1.23.0"
            ]
